--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# SSH keys, just in case
+id_rsa
+id_rsa.pub
